# RoboBaton_4p_demo

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README_EN.md  RELEASE_CHECKLIST.md
build_x5/: CMakeCache.txt  Makefile  cmake_install.cmake  imu_reader_demo  serial_port_demo
demo/: cam_demo  env.sh  imu_reader_demo  manifest.sha256  sensor_demo  serial_port_demo
demo/lib/: libicm42688.so.2  libprrtsp.so.2  libsc132.so.2.0.0
include/: icm42688_driver.h  pr_venc.h  prrtsp_v2.h  sc132camera.h
include/icm42688_x5/: icm42688_driver.h
lib/: libicm42688.so.2  libprrtsp.so.2.0.0  libsc132.so.2  libsc132.so.2.0.0
scripts/: build_cam_demo.sh  build_imu_reader_demo.sh  build_sensor_demo.sh  build_serial_port_demo.sh  cam_demo_regression.sh  package_runtime.sh  verify_runtime_package.py
src/: cam_demo.cpp  cam_demo_common.cpp  cam_demo_common.h  cam_demo_config.cpp  cam_demo_config.h  cam_demo_pipeline.cpp  cam_demo_pipeline.h  cam_demo_rtsp.cpp  cam_demo_rtsp.h  imu_reader_demo.cpp  sensor_demo.cpp  serial_port_demo.cpp
tests/: package_runtime_script_test.py  release008_consumer_lifecycle_test.cpp  release008_contract_test.py  release008_fake_producers.cpp  release008_fake_producers.h
